fix white background issue on ios devices

--- a/webapp/src/main/resources/static/css/frontend.css
+++ b/webapp/src/main/resources/static/css/frontend.css
@@ -37,6 +37,7 @@ body {
     font-weight: 400;
     line-height: 1.5;
     text-align: left;
+    background-color: var(--dark-background-color);
     background-image: url("/images/background.png")
 }
 h1, h2 {
